--- a/CoreHealth/appsettings.json
+++ b/CoreHealth/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlConnection": ""
+  },
+  "UploadSettings": {
+    "UploadDirectory": "Uploads",
+    "AllowedExtensions": ".jpg,.jpeg,.png",
+    "MaxFileSizeInMb": 5
+  }
 }
