Migration created, nav propierties updated. Database updated

--- a/CoreHealth/appsettings.json
+++ b/CoreHealth/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConnection": ""
+    "SqlConnection": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba64b_corehealth;User Id=db_aba64b_corehealth_admin;Password=XpAY.g}2T6W1N"
   },
   "UploadSettings": {
     "UploadDirectory": "Uploads",
